* relying on node to iterate over custom configurations so that other recipes have a chance to manipulate values during compilation phase

--- a/templates/default/postgresql.conf.custom.erb
+++ b/templates/default/postgresql.conf.custom.erb
@@ -5,6 +5,6 @@
 # -----------------------------
 #
 
-<% @configuration.each_pair do |key, value| %>
+<% node['postgresql']['conf'].each_pair do |key, value| %>
 <%= "#{key} = '#{value}'" %>
 <% end %>
