--- a/templates/default/postgresql.conf.standard.erb
+++ b/templates/default/postgresql.conf.standard.erb
@@ -119,19 +119,29 @@ ssl_key_file = '<%= node["postgresql"]["ssl_key_file"] %>'   # (change requires 
 shared_buffers = <%= node["postgresql"]["shared_buffers"] %>     # min 128kB
           # (change requires restart)
 #temp_buffers = <%= node["postgresql"]["temp_buffers"] %>     # min 800kB
-#max_prepared_transactions = <%= node["postgresql"]["max_prepared_transactions"] %>    # zero disables the feature
+<%- if node["postgresql"]["max_prepared_transactions"] %>
+max_prepared_transactions = <%= node["postgresql"]["max_prepared_transactions"] %>    # zero disables the feature
+<%- end%>
           # (change requires restart)
 # Note:  Increasing max_prepared_transactions costs ~600 bytes of shared memory
 # per transaction slot, plus lock space (see max_locks_per_transaction).
 # It is not advisable to set max_prepared_transactions nonzero unless you
 # actively intend to use prepared transactions.
-#work_mem = <%= node["postgresql"]["work_mem"] %>       # min 64kB
-#maintenance_work_mem = <%= node["postgresql"]["maintenance_work_mem"] %>    # min 1MB
-#max_stack_depth = <%= node["postgresql"]["max_stack_depth"] %>      # min 100kB
+<%- if node["postgresql"]["work_mem"] %>
+work_mem = <%= node["postgresql"]["work_mem"] %>       # min 64kB
+<%- end %>
+<%- if node["postgresql"]["maintenance_work_mem"] %>
+maintenance_work_mem = <%= node["postgresql"]["maintenance_work_mem"] %>    # min 1MB
+<%- end %>
+<%- if node["postgresql"]["max_stack_depth"] %>
+max_stack_depth = <%= node["postgresql"]["max_stack_depth"] %>      # min 100kB
+<%- end %>
 
 # - Kernel Resource Usage -
 
-#max_files_per_process = <%= node["postgresql"]["max_files_per_process"] %>   # min 25
+<%- if node["postgresql"]["max_files_per_process"] %>
+max_files_per_process = <%= node["postgresql"]["max_files_per_process"] %>   # min 25
+<%- end %>
           # (change requires restart)
 #shared_preload_libraries = '<%= node["postgresql"]["shared_preload_libraries"] %>'    # (change requires restart)
 
@@ -160,7 +170,9 @@ shared_buffers = <%= node["postgresql"]["shared_buffers"] %>     # min 128kB
 
 # - Settings -
 
-#wal_level = <%= node["postgresql"]["wal_level"] %>      # minimal, archive, or hot_standby
+<%- if node["postgresql"]["wal_level"] %>
+wal_level = <%= node["postgresql"]["wal_level"] %>      # minimal, archive, or hot_standby
+<%- end %>
           # (change requires restart)
 #fsync = <%= node["postgresql"]["fsync"] %>       # turns forced synchronization on or off
 #synchronous_commit = <%= node["postgresql"]["synchronous_commit"] %>    # synchronization level; on, off, or local
@@ -172,7 +184,9 @@ shared_buffers = <%= node["postgresql"]["shared_buffers"] %>     # min 128kB
           #   fsync_writethrough
           #   open_sync
 #full_page_writes = <%= node["postgresql"]["full_page_writes"] %>      # recover from partial page writes
-#wal_buffers = <%= node["postgresql"]["wal_buffers"] %>     # min 32kB, -1 sets based on shared_buffers
+<%- if node["postgresql"]["wal_buffers"] %>
+wal_buffers = <%= node["postgresql"]["wal_buffers"] %>     # min 32kB, -1 sets based on shared_buffers
+<%- end %>
           # (change requires restart)
 #wal_writer_delay = <%= node["postgresql"]["wal_writer_delay"] %>   # 1-10000 milliseconds
 
@@ -181,16 +195,24 @@ shared_buffers = <%= node["postgresql"]["shared_buffers"] %>     # min 128kB
 
 # - Checkpoints -
 
-#checkpoint_segments = <%= node["postgresql"]["checkpoint_segments"] %>    # in logfile segments, min 1, 16MB each
+<%- if node["postgresql"]["checkpoint_segments"] %>
+checkpoint_segments = <%= node["postgresql"]["checkpoint_segments"] %>    # in logfile segments, min 1, 16MB each
+<%- end %>
 #checkpoint_timeout = <%= node["postgresql"]["checkpoint_timeout"] %>    # range 30s-1h
 #checkpoint_completion_target = <%= node["postgresql"]["checkpoint_completion_target"] %> # checkpoint target duration, 0.0 - 1.0
 #checkpoint_warning = <%= node["postgresql"]["checkpoint_warning"] %>   # 0 disables
 
 # - Archiving -
 
-#archive_mode = <%= node["postgresql"]["archive_mode"] %>   # allows archiving to be done
+
+<%- if node["postgresql"]["archive_mode"] %>
+archive_mode = <%= node["postgresql"]["archive_mode"] %>   # allows archiving to be done
+<%- end %>
+
         # (change requires restart)
-#archive_command = '<%= node["postgresql"]["archive_command"] %>'   # command to use to archive a logfile segment
+<%- if node["postgresql"]["archive_command"] %>
+archive_command = '<%= node["postgresql"]["archive_command"] %>'   # command to use to archive a logfile segment
+<%- end %>
 #archive_timeout = <%= node["postgresql"]["archive_timeout"] %>    # force a logfile segment switch after this
         # number of seconds; 0 disables
 
@@ -203,10 +225,14 @@ shared_buffers = <%= node["postgresql"]["shared_buffers"] %>     # min 128kB
 
 # These settings are ignored on a standby server
 
-#max_wal_senders = <%= node["postgresql"]["max_wal_senders"] %>    # max number of walsender processes
+<%- if node["postgresql"]["max_wal_senders"] %>
+max_wal_senders = <%= node["postgresql"]["max_wal_senders"] %>    # max number of walsender processes
+<%- end %>
         # (change requires restart)
 #wal_sender_delay = <%= node["postgresql"]["wal_sender_delay"] %>    # walsender cycle time, 1-10000 milliseconds
-#wal_keep_segments = <%= node["postgresql"]["wal_keep_segments"] %>    # in logfile segments, 16MB each; 0 disables
+<%- if node["postgresql"]["wal_keep_segments"] %>
+wal_keep_segments = <%= node["postgresql"]["wal_keep_segments"] %>    # in logfile segments, 16MB each; 0 disables
+<%- end %>
 #vacuum_defer_cleanup_age = <%= node["postgresql"]["vacuum_defer_cleanup_age"] %> # number of xacts by which cleanup is delayed
 #replication_timeout = <%= node["postgresql"]["replication_timeout"] %>  # in milliseconds; 0 disables
 #synchronous_standby_names = '<%= node["postgresql"]["synchronous_standby_names"] %>' # standby servers that provide sync rep
@@ -217,17 +243,23 @@ shared_buffers = <%= node["postgresql"]["shared_buffers"] %>     # min 128kB
 
 # These settings are ignored on a master server
 
-#hot_standby = <%= node["postgresql"]["hot_standby"] %>      # "on" allows queries during recovery
+<%- if node["postgresql"]["hot_standby"] %>
+hot_standby = <%= node["postgresql"]["hot_standby"] %>      # "on" allows queries during recovery
+<%- end %>
           # (change requires restart)
 #max_standby_archive_delay = <%= node["postgresql"]["max_standby_archive_delay"] %>  # max delay before canceling queries
           # when reading WAL from archive;
           # -1 allows indefinite delay
-#max_standby_streaming_delay = <%= node["postgresql"]["max_standby_streaming_delay"] %>  # max delay before canceling queries
+<%- if node["postgresql"]["max_standby_streaming_delay"] %>
+max_standby_streaming_delay = <%= node["postgresql"]["max_standby_streaming_delay"] %>  # max delay before canceling queries
+<%- end %>
           # when reading streaming WAL;
           # -1 allows indefinite delay
 #wal_receiver_status_interval = <%= node["postgresql"]["wal_receiver_status_interval"] %> # send replies at least this often
           # 0 disables
-#hot_standby_feedback = <%= node["postgresql"]["hot_standby_feedback"] %>   # send info from standby to prevent
+<%- if node["postgresql"]["hot_standby_feedback"] %>
+hot_standby_feedback = <%= node["postgresql"]["hot_standby_feedback"] %>   # send info from standby to prevent
+<%- end %>
           # query conflicts
 
 
@@ -255,7 +287,9 @@ shared_buffers = <%= node["postgresql"]["shared_buffers"] %>     # min 128kB
 #cpu_tuple_cost = <%= node["postgresql"]["cpu_tuple_cost"] %>      # same scale as above
 #cpu_index_tuple_cost = <%= node["postgresql"]["cpu_index_tuple_cost"] %>   # same scale as above
 #cpu_operator_cost = <%= node["postgresql"]["cpu_operator_cost"] %>   # same scale as above
-#effective_cache_size = <%= node["postgresql"]["effective_cache_size"] %>
+<%- if node["postgresql"]["effective_cache_size"] %>
+effective_cache_size = <%= node["postgresql"]["effective_cache_size"] %>
+<%- end %>
 
 # - Genetic Query Optimizer -
 
@@ -289,7 +323,9 @@ shared_buffers = <%= node["postgresql"]["shared_buffers"] %>     # min 128kB
           # requires logging_collector to be on.
 
 # This is used when logging to stderr:
-#logging_collector = <%= node["postgresql"]["logging_collector"] %>    # Enable capturing of stderr and csvlog
+<%- if node["postgresql"]["logging_collector"] %>
+logging_collector = <%= node["postgresql"]["logging_collector"] %>    # Enable capturing of stderr and csvlog
+<%- end %>
           # into log files. Required to be on for
           # csvlogs.
           # (change requires restart)
@@ -311,7 +347,9 @@ shared_buffers = <%= node["postgresql"]["shared_buffers"] %>     # min 128kB
           # in all cases.
 #log_rotation_age = <%= node["postgresql"]["log_rotation_age"] %>      # Automatic rotation of logfiles will
           # happen after that time.  0 disables.
-#log_rotation_size = <%= node["postgresql"]["log_rotation_size"] %>   # Automatic rotation of logfiles will
+<%- if node["postgresql"]["log_rotation_size"] %>
+log_rotation_size = <%= node["postgresql"]["log_rotation_size"] %>   # Automatic rotation of logfiles will
+<%- end %>
           # happen after that much log output.
           # 0 disables.
 
@@ -366,7 +404,9 @@ shared_buffers = <%= node["postgresql"]["shared_buffers"] %>     # min 128kB
           #   fatal
           #   panic (effectively off)
 
-#log_min_duration_statement = <%= node["postgresql"]["log_min_duration_statement"] %>  # -1 is disabled, 0 logs all statements
+<%- if node["postgresql"]["log_min_duration_statement"] %>
+log_min_duration_statement = <%= node["postgresql"]["log_min_duration_statement"] %>  # -1 is disabled, 0 logs all statements
+<%- end %>
           # and their durations, > 0 logs only
           # statements running at least this number
           # of milliseconds
