--- a/templates/default/postgresql.conf.standard.erb
+++ b/templates/default/postgresql.conf.standard.erb
@@ -175,7 +175,9 @@ wal_level = <%= node["postgresql"]["wal_level"] %>      # minimal, archive, or h
 <%- end %>
           # (change requires restart)
 #fsync = <%= node["postgresql"]["fsync"] %>       # turns forced synchronization on or off
-#synchronous_commit = <%= node["postgresql"]["synchronous_commit"] %>    # synchronization level; on, off, or local
+<%- if node["postgresql"]["synchronous_commit"] %>
+synchronous_commit = <%= node["postgresql"]["synchronous_commit"] %>    # synchronization level; on, off, or local
+<%- end %>
 #wal_sync_method = <%= node["postgresql"]["wal_sync_method"] %>    # the default is the first option
           # supported by the operating system:
           #   open_datasync
@@ -198,8 +200,12 @@ wal_writer_delay = <%= node["postgresql"]["wal_writer_delay"] %>   # 1-10000 mil
 <%- if node["postgresql"]["checkpoint_segments"] %>
 checkpoint_segments = <%= node["postgresql"]["checkpoint_segments"] %>    # in logfile segments, min 1, 16MB each
 <%- end %>
-#checkpoint_timeout = <%= node["postgresql"]["checkpoint_timeout"] %>    # range 30s-1h
-#checkpoint_completion_target = <%= node["postgresql"]["checkpoint_completion_target"] %> # checkpoint target duration, 0.0 - 1.0
+<%- if node["postgresql"]["checkpoint_timeout"] %>
+checkpoint_timeout = <%= node["postgresql"]["checkpoint_timeout"] %>    # range 30s-1h
+<%- end %>
+<%- if node["postgresql"]["checkpoint_completion_target"] %>
+checkpoint_completion_target = <%= node["postgresql"]["checkpoint_completion_target"] %> # checkpoint target duration, 0.0 - 1.0
+<%- end %>
 #checkpoint_warning = <%= node["postgresql"]["checkpoint_warning"] %>   # 0 disables
 
 # - Archiving -
