--- a/templates/default/postgresql.conf.erb
+++ b/templates/default/postgresql.conf.erb
@@ -341,7 +341,7 @@ logging_collector = <%= node["postgresql"]["logging_collector"] %>    # Enable c
 # These are only used if logging_collector is on:
 log_directory = '<%= node["postgresql"]["log_directory"] %>'   # directory where log files are written,
           # can be absolute or relative to PGDATA
-#log_filename = '<%= node["postgresql"]["log_filename"] %>'  # log file name pattern,
+log_filename = '<%= node["postgresql"]["log_filename"] %>'  # log file name pattern,
           # can include strftime() escapes
 log_file_mode = <%= node["postgresql"]["log_file_mode"] %>     # creation mode for log files,
           # begin with 0 to use octal notation
