--- a/templates/default/pg_hba.conf.erb
+++ b/templates/default/pg_hba.conf.erb
@@ -73,7 +73,7 @@
 # configuration parameter, or via the -i or -h command line switches.
 
 <% node["postgresql"]["pg_hba"].each do |hba| %>
-<%= hba['type'] %> <%= hba['db'] %> <%= hba['user'] %> <%= hba['addr'] %> <%= hba['method'] %>
+<%= hba["type"] %> <%= hba["db"] %> <%= hba["user"] %> <%= hba["addr"] %> <%= hba["method"] %>
 <% end %>
 
 # DO NOT DISABLE!
@@ -83,7 +83,7 @@
 # maintenance (custom daily cronjobs, replication, and similar tasks).
 #
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
-<% if node[:postgresql][:pg_hba_defaults] %>
+<% if node["postgresql"]["pg_hba_defaults"] %>
 # Database administrative login by Unix domain socket
 local   all             postgres                                peer
 # "local" is for Unix domain socket connections only
